# Mini-Antigravity

./: .gitignore  Cargo.toml  README.md  mag.bat  mini_antigravity.py  package-lock.json  pro_app.py  rust-toolchain.toml  webapp.py
agents/: architect.md  coder.md  engineer.md  myagent.md  researcher.md  reviewer.md  tester.md
docs/: index.html
src/: agent.rs  config.rs  lib.rs  main.rs  orchestrator.rs  scheduler.rs
src/tools/: file_ops.rs  mod.rs  shell.rs  web.rs
templates/: index.html  premium.html
