[package]
name = "mini-antigravity"
version = "0.1.0"
edition = "2021"
description = "A mini agent orchestration system inspired by Google Antigravity"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
anyhow = "1"
colored = "2"
async-trait = "0.1"
futures = "0.3"
dirs = "5"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
urlencoding = "2"
